--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         理工学部 情報工学科を「情報工学部」へとアップデートし，
                         多種多様な分野で活躍する，次世代の情報エンジニアを育成します．
                     </div>
+                    <div>
+                        今すぐ入学しよう！
+                    </div>
                 </div>
             </div>
         </main>
